2020-08-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/nt_base.c: Fix compilation issue noticed under MinGW.

	* magick/render.c (DrawImage): Handle the case that
	ExtractTokensBetweenPushPop() can return NULL.  Fixes oss-fuzz
	24659 "Null-dereference READ in DrawImage".

	* magick/magick.c (MagickCondSignal): Re-implement to handle the
	case where a new-style 'siginfo' signal handler was previously
	registered, as well as the legacy type.  This may address oss-fuzz
	24690 "Use-of-uninitialized-value in MagickCondSignal".

2020-07-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/drawtest.c: Use structured error handling and report all
	output to stderr so it does not screw up TAP tests.

	* magick/render.c (DTOLONG_MIN): Correct 32-bit definition of
	DTOLONG_MIN.

	* wand/wandtests.tap: Wand drawtest requires FreeType.

	* NEWS.txt: Update with changes up to 2020-07-26.

	* VisualMagick/magick/magick_config.h.in (HasGS): Default HasGS to
	enabled.

	* configure.ac: Add a --without-gs configure option to disable
	reading PS, EPS, and PDF formats via an external Ghostscript
	delegate program.  This is indended as an absolute security
	measure for sites that want to be assured to avoid executing
	Ghostscript even though it is installed on the system.  Removal of
	PS and PDF reading support breaks reading other formats which are
	handled by executing an external program to first convert to PS or
	PDF formats.

	* magick/delegate.c (InvokePostscriptDelegate): Use HasGS to
	enable use of the Ghostscript delegate.  Change the existing
	legacy HasGS ifdefs to HasGSLIB.

2020-07-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Fix compilation error when
	COMPRESSION_WEBP is not defined.

2020-07-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Fix enableval syntax for
	--disable-compressed-files.

2020-07-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
