@@ -1,3 +1,9 @@
+2020-08-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/delegate.c, magick/magick.c, magick/nt_base.c: Fix
+	compilation errors under MinGW when Ghostscript support is
+	disabled.
+
 2020-08-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/nt_base.c: Fix compilation issue noticed under MinGW.
